--- a/src/main/resources/assets/mia/lang/zh_cn.json
+++ b/src/main/resources/assets/mia/lang/zh_cn.json
@@ -1,7 +1,7 @@
 {
-  "itemGroup.mia.base": "Made In Abyss",
-  "block.mia.example_block": "Example Block",
-  "block.mia.example_portal_block": "Example Portal Block",
+  "itemGroup.mia.base": "来自深渊",
+  "item.mia.example_item": "测试物品",
 
-  "item.mia.example_item": "Example Item"
+  "block.mia.example_block": "测试方块",
+  "block.mia.example_portal_block": "测试传送方块"
 }
