--- a/src/main/resources/assets/mia/lang/zh_cn.json
+++ b/src/main/resources/assets/mia/lang/zh_cn.json
@@ -1,6 +1,6 @@
 {
-  "itemGroup.mia.base": "来自深渊",
-  "item.mia.example_item": "测试物品",
+  "itemGroup.mia.mia": "来自深渊",
+  "item.mia.purin": "布丁",
 
   "block.mia.example_block": "测试方块",
   "block.mia.example_portal_block": "测试传送方块"
