--- a/src/main/resources/assets/mia/lang/en_us.json
+++ b/src/main/resources/assets/mia/lang/en_us.json
@@ -1,6 +1,6 @@
 {
-  "itemGroup.mia.base": "Made In Abyss",
-  "item.mia.example_item": "Example Item",
+  "itemGroup.mia.mia": "Made In Abyss",
+  "item.mia.purin": "Purin",
 
   "block.mia.example_block": "Example Block",
   "block.mia.example_portal_block": "Example Portal Block"
