--- a/src/main/resources/assets/mia/lang/en_us.json
+++ b/src/main/resources/assets/mia/lang/en_us.json
@@ -1,6 +1,7 @@
 {
   "itemGroup.mia.mia": "Made In Abyss",
   "item.mia.purin": "Purin",
+  "item.mia.unlimited_water_bucket": "Unlimited Water Bucket",
 
   "block.mia.alexandrite_block": "Alexandrite Block",
 
