--- a/src/main/resources/assets/mia/lang/zh_cn.json
+++ b/src/main/resources/assets/mia/lang/zh_cn.json
@@ -1,6 +1,7 @@
 {
   "itemGroup.mia.mia": "来自深渊",
   "item.mia.purin": "布丁",
+  "item.mia.unlimited_water_bucket": "无限水桶",
 
   "block.mia.alexandrite_block": "紫翠块",
 
