--- a/src/main/resources/assets/mia/lang/zh_cn.json
+++ b/src/main/resources/assets/mia/lang/zh_cn.json
@@ -1,9 +1,10 @@
 {
   "itemGroup.mia.mia": "来自深渊",
   "item.mia.purin": "布丁",
-  "item.mia.unlimited_water_bucket": "无限水桶",
+  "item.mia.endless_cup": "无尽水杯",
 
   "block.mia.alexandrite_block": "紫翠块",
+  "block.mia.chlorophyte_ore": "叶绿矿",
 
   "block.mia.example_block": "测试方块",
   "block.mia.example_portal_block": "测试传送方块"
