--- a/src/main/resources/assets/mia/lang/en_us.json
+++ b/src/main/resources/assets/mia/lang/en_us.json
@@ -1,9 +1,10 @@
 {
   "itemGroup.mia.mia": "Made In Abyss",
   "item.mia.purin": "Purin",
-  "item.mia.unlimited_water_bucket": "Unlimited Water Bucket",
+  "item.mia.endless_cup": "Endless Cup",
 
   "block.mia.alexandrite_block": "Alexandrite Block",
+  "block.mia.chlorophyte_ore": "Chlorophyte Ore",
 
   "block.mia.example_block": "Example Block",
   "block.mia.example_portal_block": "Example Portal Block"
