时停音效，特效补充，添加材质

--- a/src/main/resources/assets/mia/lang/zh_cn.json
+++ b/src/main/resources/assets/mia/lang/zh_cn.json
@@ -2,6 +2,8 @@
   "itemGroup.mia.mia": "来自深渊",
   "item.mia.purin": "布丁",
   "item.mia.endless_cup": "无尽水杯",
+  "item.mia.time_clock" : "时间禁止之钟",
+  "item.mia.knife" : "小刀",
 
   "block.mia.alexandrite_block": "紫翠块",
   "block.mia.chlorophyte_ore": "叶绿矿",
