--- a/src/main/resources/assets/mia/lang/zh_cn.json
+++ b/src/main/resources/assets/mia/lang/zh_cn.json
@@ -5,9 +5,12 @@
   "item.mia.time_clock" : "时间禁止之钟",
   "item.mia.knife" : "小刀",
 
-  "block.mia.seventh_crucible_block": "沸腾熔炉之釜",
-  "block.mia.alexandrite_block": "紫翠块",
+  "block.mia.grass_block_d1": "深界一层草方块",
+  "block.mia.covergrass_cobblestone": "覆草圆石",
+  "block.mia.covergrass_andesite": "覆草安山岩",
+  "block.mia.covergrass_deepslate": "覆草深板岩",
   "block.mia.chlorophyte_ore": "叶绿矿",
+  "block.mia.seventh_crucible_block": "沸腾熔炉之釜",
 
   "block.mia.example_block": "测试方块",
   "block.mia.example_portal_block": "测试传送方块"
